# pychosis

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
experiments/apps/event_ingestor/: Makefile  README.md  pyproject.toml
experiments/apps/event_ingestor/src/: main.py
experiments/example-1/: pyproject.toml
tools/pychosis-create-app/: .gitignore  README.md  pyproject.toml
tools/pychosis-create-app/src/: constants.py  main.py  tree_selector.py
tools/pychosis-create-app/src/steps/: __init__.py  git_setup.py  pyproject_override.py  python_setup.py
tools/pychosis-create-app/templates/: .gitignore  Makefile  main.py  pyproject.toml
